ueforge/src/snapshots/ueforge__envelope__tests__snapshot_err_response.snap
---
source: ueforge/src/envelope.rs
expression: r
---
{
  "ok": false,
  "op": "snapshot",
  "error": "no slot active",
  "result": null,
  "state": {
    "alive": false
  }
}
