ueforge/src/snapshots/ueforge__envelope__tests__snapshot_from_result_err.snap
---
source: ueforge/src/envelope.rs
expression: r
---
{
  "ok": false,
  "op": "spend_skill",
  "error": "insufficient skill points",
  "result": null,
  "state": {
    "xp": 1234
  }
}
