ueforge/src/snapshots/ueforge__envelope__tests__snapshot_ok_response.snap
---
source: ueforge/src/envelope.rs
expression: r
---
{
  "ok": true,
  "op": "snapshot",
  "error": null,
  "result": {
    "foo": 42
  },
  "state": {
    "alive": true
  }
}
